--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ php:
 install:
   - composer self-update
   - make install
+before_script:
+  - cp .env.travis .env
+  - php artisan key:generate
 script: make lint test
